# onchain-sybil-detector

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_OSD.md  LICENSE  Makefile  README.md  badge-yolo-1774257362.md  pyproject.toml
configs/: default_config_osd.yaml
datasets/: README.md  __init__.py  adversarial_simulator_osd.py  known_sybil_addresses.csv  synthetic_generator.py
demo_outputs_osd/: adversarial_benchmark.csv  adversarial_benchmark.json  adversarial_benchmark_latest.json  adversarial_benchmark_osd.txt  adversarial_benchmark_rerun_osd.txt  adversarial_benchmark_run.txt  adversarial_benchmark_table.md  analysis_executed.ipynb  cli_benchmark_example_output.txt  cli_benchmark_head_osd.txt  cli_benchmark_osd.txt  cli_explain_osd.txt  cli_scan_d1.txt  cli_scan_d2.txt  cli_scan_d3.txt  cli_scan_example_output.txt  cli_scan_osd.txt  cli_simulate_d1.txt  cli_simulate_d2.txt  cli_simulate_d3.txt  cli_simulate_example_output.txt  cli_simulate_osd.txt  cli_verify_pipeline.txt  explainer_two_wallets_osd.txt  final_verification_loop.txt  generate_benchmark_table_output.txt  level8_diagnosis_osd.txt  make_test_osd.txt  notebook_run_osd.txt  osd_benchmark.csv  osd_report.html  osd_synthetic.csv  osd_synthetic_labels.csv  pip_install_osd.txt  readme_snippets_osd.txt  report_generation_osd.txt  report_regeneration_osd.txt  synthetic_benchmark_osd.json  synthetic_benchmark_osd.txt  test_output_osd.txt  (+1 more)
examples/: quickstart.py
notebooks/: analysis.ipynb  case_study_airdrop_sybils.ipynb
scripts/: generate_benchmark_table.py
tests/: conftest.py  test_benchmark.py  (+8 more)
(+21 files in other folders)
